--- a/openrem/remapp/templates/remapp/standardnames_confirm_delete.html
+++ b/openrem/remapp/templates/remapp/standardnames_confirm_delete.html
@@ -20,23 +20,23 @@
 
                         <table class="table table-bordered table-hover">
                             <tr>
-                                <td>Standard name:</td>
+                                <td><label>Standard name:</label></td>
                                 <td>{{ object.standard_name }}</td>
                             </tr>
                             <tr>
-                                <td>Study description:</td>
+                                <td><label>Study description:</label></td>
                                 <td>{{ object.study_description }}</td>
                             </tr>
                             <tr>
-                                <td>Requested procedure name:</td>
+                                <td><label>Requested procedure name:</label></td>
                                 <td>{{ object.requested_procedure_code_meaning }}</td>
                             </tr>
                             <tr>
-                                <td>Procedure name:</td>
+                                <td><label>Procedure name:</label></td>
                                 <td>{{ object.procedure_code_meaning }}</td>
                             </tr>
                             <tr>
-                                <td>Acquisition protocol:</td>
+                                <td><label>Acquisition protocol:</label></td>
                                 <td>{{ object.acquisition_protocol }}</td>
                             </tr>
                         </table>
