--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -133,6 +133,7 @@
                         <li><a href="{% url 'rf_alert_settings_update' 1 %}">{% trans "Fluoro alert levels" %}</a> </li>
                         <li><a href="{% url 'rf_alert_notifications_view' %}">{% trans "Fluoro alert notification" %}</a> </li>
                         <li><a href="{% url 'celery_admin' %}">{% trans "Tasks" %}</a></li>
+                        <li><a href="{% url 'standard_names_view' %}">{% trans "Standard exam names" %}</a></li>
                       {% endif %}
                     </ul>
                 </li>
