--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -14,38 +14,36 @@
 
 {% block mainblock %}		
 
-      <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-            <h3>Create or modify a standard name for {{ modality_name }} systems</h3>
-            <p>
-                Use this form to create or modify the standard name associated with a study
-                description, requested procedure, procedure or acquisition protocol name.
-            </p>
-
-            {% if admin.admingroup %}
-            <div class="panel-body">
-                <form action="" method="post" class="form-horizontal" role="form">
-                    {% csrf_token %}
-                    {% for hidden in form.hidden_fields %}
-                        {{ hidden }}
-                    {% endfor %}
-                    <table aria-describedby="Add a new standard name">
-                        {% for field in form.visible_fields %}
-                            <tr>
-                                <td><label for="{{ field.auto_id }}">{{ field.label }}:</label></td>
-                                <td>{{ field }}</td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                    <input class="btn btn-default" name="submit" type="submit" />
-                </form>
-            </div>
-            {% else %}
-                <p>
-                    <strong>Only users in the Admin group can create or modify standard names.</strong>
-                </p>
-            {% endif %}
-        </div>
+      <div class="row col-md-offset-2">
+        <h1>Create or modify a standard name for {{ form.modality.value }} systems</h1>
       </div>
 
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2 ">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    Enter the standard name and select the required options.
+                </div>
+
+                {% if admin.admingroup %}
+                <div class="panel-body">
+                    <form action="" method="post" class="form-horizontal" role="form">
+                        {% csrf_token %}
+                        <table  class="table table-bordered table-hover" aria-describedby="Add or modify a standard name">
+                            {{ form }}
+                        </table>
+                        <input class="btn btn-primary" name="submit" type="submit" />
+                        <input type="button" class="btn btn-primary" value="Cancel"
+                               onclick="window.location = '{% url 'standard_names_view' %}';"/>
+                    </form>
+                </div>
+
+                {% else %}
+                <div class="row col-md-offset-2">
+                    <p>Only users in the Admin group can create or modify standard names.</p>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}	
