Added a system-level setting to configure if standard names should be used. Added display of standard names in the CT summary page. Modified standard name table so that a requested procedure name, study description, procedure name and acquisition protocol can only appear in the table once - not sure if this will cause issues. It may be that these fields should be unique with modality, rather than just unique on their own. Refs issue #862

--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -133,7 +133,8 @@
                         <li><a href="{% url 'rf_alert_settings_update' 1 %}">{% trans "Fluoro alert levels" %}</a> </li>
                         <li><a href="{% url 'rf_alert_notifications_view' %}">{% trans "Fluoro alert notification" %}</a> </li>
                         <li><a href="{% url 'celery_admin' %}">{% trans "Tasks" %}</a></li>
-                        <li><a href="{% url 'standard_names_view' %}">{% trans "Standard exam names" %}</a></li>
+                        <li><a href="{% url 'standard_name_settings' 1 %}">{% trans "Standard name settings" %}</a></li>
+                        <li><a href="{% url 'standard_names_view' %}">{% trans "Standard name mapping" %}</a></li>
                       {% endif %}
                     </ul>
                 </li>
