--- a/openrem/remapp/templates/remapp/ctdetail.html
+++ b/openrem/remapp/templates/remapp/ctdetail.html
@@ -22,6 +22,11 @@
     <li>Study description: {{ generalstudymoduleattr.study_description }}</li>
     <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
     <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
+  {% if showStandardNames %}
+    <li>Standard study name: {{ generalstudymoduleattr.standard_study_name }}</li>
+    <li>Standard procedure name: {{ generalstudymoduleattr.standard_procedure_name }}</li>
+    <li>Standard requested name: {{ generalstudymoduleattr.standard_request_name }}</li>
+  {% endif %}
     <li>Patient age: {{ patientstudy.patient_age_decimal|floatformat:1 }} years</li>
     <li>Patient height and weight: {{ patientstudy.patient_size|floatformat:2 }} m, {{ patientstudy.patient_weight|floatformat:1 }} kg</li>
     <li>Hospital: {{ equipment.institution_name }}</li>
@@ -55,6 +60,9 @@
 
 <table class="table table-striped table-bordered small" aria-describedby="Exposure details for each acquisition contained in the study">
     <th scope="col">Acquisition protocol</th>
+{% if showStandardNames %}
+    <th scope="col">Standard acquisition protocol</th>
+{% endif %}
     <th scope="col">Type</th>
     <th scope="col">CTDI<sub>vol</sub> (mGy)</th>
     <th scope="col">DLP (mGy&middot;cm)</th>
@@ -78,6 +86,9 @@
 
       <tr>
         <td rowspan="2">{{ event.acquisition_protocol }}</td>
+{% if showStandardNames %}
+        <td rowspan="2">{{ event.standard_acquisition_protocol }}</td>
+{% endif %}
         <td rowspan="2">{{ event.ct_acquisition_type.code_meaning }}</td>
         <td rowspan="2">
           {{ event.mean_ctdivol|floatformat:2 }}
