--- a/openrem/remapp/templates/remapp/dxdetail.html
+++ b/openrem/remapp/templates/remapp/dxdetail.html
@@ -22,6 +22,12 @@
         <li>Study description: {{ generalstudymoduleattr.study_description }}</li>
         <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
         <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
+      {% if showStandardNames %}
+        <li>Standard study name: {{ generalstudymoduleattr.standard_study_name }}</li>
+        <li>Standard procedure name: {{ generalstudymoduleattr.standard_procedure_name }}</li>
+        <li>Standard requested name: {{ generalstudymoduleattr.standard_request_name }}</li>
+      {% endif %}
+
         <li>Patient age: {{ patientstudy.patient_age_decimal|floatformat:1 }} years</li>
         <li>
           Patient height and weight: {{ patientstudy.patient_size|floatformat:2 }} m,
@@ -83,6 +89,9 @@
       <table class="table table-striped table-bordered small" aria-describedby="Exposure details for each acquisition contained in the study">
         <th scope="col">Time</th>
         <th scope="col">Acquisition protocol</th>
+    {% if showStandardNames %}
+        <th scope="col">Standard acquisition protocol</th>
+    {% endif %}
         <th scope="col">
           Anatomy, laterality<br>
           Targe region<br>
@@ -106,6 +115,9 @@
               <tr>
                 <td>{{ event.date_time_started|time:"H:i.s" }}</td>
                 <td>{{ event.acquisition_protocol }}</td>
+        {% if showStandardNames %}
+                <td rowspan="2">{{ event.standard_acquisition_protocol }}</td>
+        {% endif %}
                 <td>
                   {% if event.anatomical_structure %} {{ event.anatomical_structure.code_meaning }} {% endif %}
                   {% if event.laterality %}{{ event.laterality.code_meaning }} {% endif %}<br>
