Added standard name display to the mammography and fluoroscopy summary and detailed views. Refs issue #862

--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -142,6 +142,15 @@
                     <tr><td class="nowrap">Accession number</td></tr>
                 </table>
             </th>
+        {% if showStandardNames %}
+            <th>
+                <table aria-describedby="Standard study description, procedure and requested procedure names">
+                    <tr><th scope="col" class="nowrap">Standard study name</th></tr>
+                    <tr><th scope="col" class="nowrap">Standard procedure name</th></tr>
+                    <tr><th scope="col" class="nowrap">Standard requested name</th></tr>
+                </table>
+            </th>
+        {% endif %}
             <th scope="col">Number of events</th>
             <th scope="col">Accumulated AGD (mGy)</th>
             {% if admin.admingroup %}
@@ -184,6 +193,17 @@
                     </table>
                 </a>
             </td>
+        {% if showStandardNames %}
+            <td>
+                <a href="{% url 'mg_detail_view' pk=exam.id %}">
+                    <table onclick="window.location='{% url 'mg_detail_view' pk=exam.id %}';" aria-describedby="Standard study description, procedure and requested procedure names">
+                        <tr><td class="nowrap">{{ exam.standard_study_name }}</td></tr>
+                        <tr><td class="nowrap">{{ exam.standard_procedure_name }}</td></tr>
+                        <tr><td class="nowrap">{{ exam.standard_request_name }}</td></tr>
+                    </table>
+                </a>
+            </td>
+        {% endif %}
             <td>
                 <a href="{% url 'mg_detail_view' pk=exam.id %}">
                     {{ projection_set.irradeventxraydata_set.count }}
