--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -30,6 +30,11 @@
     <li>Study description: {{ generalstudymoduleattr.study_description }}</li>
     <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
     <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
+  {% if showStandardNames %}
+    <li>Standard study name: {{ generalstudymoduleattr.standard_study_name }}</li>
+    <li>Standard procedure name: {{ generalstudymoduleattr.standard_procedure_name }}</li>
+    <li>Standard requested name: {{ generalstudymoduleattr.standard_request_name }}</li>
+  {% endif %}
     <li>Patient age: {{ generalstudymoduleattr.patientstudymoduleattr_set.get.patient_age_decimal|floatformat:1 }} years</li>
     <li>Hospital: {{ equipment.institution_name }}</li>
     <li>
@@ -76,6 +81,9 @@
 <table class="table table-striped table-bordered small sortable" aria-describedby="Exposure details for each acquisition contained in the study">
     <th scope="col">Time</th>
     <th scope="col">Acquisition protocol</th>
+{% if showStandardNames %}
+    <th scope="col">Standard acquisition protocol</th>
+{% endif %}
     <th scope="col">Laterality</th>
     <th scope="col">View code</th>
     <th scope="col">Compression thickness (mm)</th>
@@ -93,6 +101,9 @@
     <tr>
         <td>{{ event.date_time_started|time:"H:i.s" }}</td>
         <td>{{ event.acquisition_protocol }}</td>
+{% if showStandardNames %}
+        <td>{{ event.standard_acquisition_protocol }}</td>
+{% endif %}
         <td>{{ event.laterality.code_meaning }}</td>
         <td>{{ event.image_view.code_meaning }}</td>
         <td>{{ event.irradeventxraymechanicaldata_set.get.compression_thickness|floatformat:0  }}</td>
