--- a/openrem/remapp/templates/remapp/ctdetail.html
+++ b/openrem/remapp/templates/remapp/ctdetail.html
@@ -23,9 +23,9 @@
     <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
     <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
   {% if showStandardNames %}
-    <li>Standard study name: {{ generalstudymoduleattr.standard_study_name }}</li>
-    <li>Standard procedure name: {{ generalstudymoduleattr.standard_procedure_name }}</li>
-    <li>Standard requested name: {{ generalstudymoduleattr.standard_request_name }}</li>
+    <li>Standard study name: {{ generalstudymoduleattr.standard_study_name|default_if_none:"-" }}</li>
+    <li>Standard procedure name: {{ generalstudymoduleattr.standard_procedure_name|default_if_none:"-" }}</li>
+    <li>Standard requested name: {{ generalstudymoduleattr.standard_request_name|default_if_none:"-" }}</li>
   {% endif %}
     <li>Patient age: {{ patientstudy.patient_age_decimal|floatformat:1 }} years</li>
     <li>Patient height and weight: {{ patientstudy.patient_size|floatformat:2 }} m, {{ patientstudy.patient_weight|floatformat:1 }} kg</li>
@@ -87,7 +87,7 @@
       <tr>
         <td rowspan="2">{{ event.acquisition_protocol }}</td>
 {% if showStandardNames %}
-        <td rowspan="2">{{ event.standard_acquisition_protocol }}</td>
+        <td rowspan="2">{{ event.standard_acquisition_protocol|default_if_none:"-" }}</td>
 {% endif %}
         <td rowspan="2">{{ event.ct_acquisition_type.code_meaning }}</td>
         <td rowspan="2">
