--- a/openrem/remapp/templates/remapp/rffiltered.html
+++ b/openrem/remapp/templates/remapp/rffiltered.html
@@ -227,9 +227,9 @@
             <td>
                 <a href="{% url 'rf_detail_view' pk=exam.id %}">
                     <table onclick="window.location='{% url 'rf_detail_view' pk=exam.id %}';" aria-describedby="Standard study description, procedure and requested procedure names">
-                        <tr><td class="nowrap">{{ exam.standard_study_name }}</td></tr>
-                        <tr><td class="nowrap">{{ exam.standard_procedure_name }}</td></tr>
-                        <tr><td class="nowrap">{{ exam.standard_request_name }}</td></tr>
+                        <tr><td class="nowrap">{{ exam.standard_study_name|default_if_none:"-" }}</td></tr>
+                        <tr><td class="nowrap">{{ exam.standard_procedure_name|default_if_none:"-" }}</td></tr>
+                        <tr><td class="nowrap">{{ exam.standard_request_name|default_if_none:"-" }}</td></tr>
                     </table>
                 </a>
             </td>
