Consistently labelling the form / column headings. Fixed error introduced in a previous commit that broke the build. Refs issue #862

--- a/openrem/remapp/templates/remapp/standardname-modality.html
+++ b/openrem/remapp/templates/remapp/standardname-modality.html
@@ -4,8 +4,8 @@
     <th scope="col">Standard name</th>
     <th scope="col">Study description</th>
     <th scope="col">Requested procedure name</th>
-    <th scope="col">Procedure</th>
-    <th scope="col">Acquisition protocol</th>
+    <th scope="col">Procedure name</th>
+    <th scope="col">Acquisition protocol name</th>
     {% if admin.admingroup %}
         <th style="text-align: center; vertical-align: middle;" scope="col">Modify?</th>
         <th style="text-align: center; vertical-align: middle;" scope="col">Delete?</th>
