--- a/openrem/remapp/templates/remapp/standardnames_confirm_delete.html
+++ b/openrem/remapp/templates/remapp/standardnames_confirm_delete.html
@@ -25,19 +25,19 @@
                             </tr>
                             <tr>
                                 <td><label>Study description:</label></td>
-                                <td>{{ object.study_description }}</td>
+                                <td>{{ object.study_description|default_if_none:"-" }}</td>
                             </tr>
                             <tr>
                                 <td><label>Requested procedure name:</label></td>
-                                <td>{{ object.requested_procedure_code_meaning }}</td>
+                                <td>{{ object.requested_procedure_code_meaning|default_if_none:"-" }}</td>
                             </tr>
                             <tr>
                                 <td><label>Procedure name:</label></td>
-                                <td>{{ object.procedure_code_meaning }}</td>
+                                <td>{{ object.procedure_code_meaning|default_if_none:"-" }}</td>
                             </tr>
                             <tr>
-                                <td><label>Acquisition protocol:</label></td>
-                                <td>{{ object.acquisition_protocol }}</td>
+                                <td><label>Acquisition protocol name:</label></td>
+                                <td>{{ object.acquisition_protocol|default_if_none:"-" }}</td>
                             </tr>
                         </table>
 
