--- a/openrem/remapp/templates/remapp/standardnameview.html
+++ b/openrem/remapp/templates/remapp/standardnameview.html
@@ -20,14 +20,19 @@
   <a id="#top"></a>
   <div class="row">
     <div class="col-md-6">
-      <h3>Standard name configuration</h3>
+      <h3>Standard name mapping</h3>
       <p>
         Jump to <a href="#ct">CT</a> | <a href="#fluoro">Fluoroscopy</a> | <a href="#mammo">Mammography</a> |
         <a href="#dx">Radiography</a>
       </p>
 
+      <p>The tables below show the configured standard name mappings for each modality. A standard name can be
+         associated with a study description, requested procedure, procedure or acquisition protocol name.</p>
+      <p>Each study description, requested procedure, procedure and acquisition protocol name can only appear once
+         in each modality table.</p>
+      <p>The tables can be sorted by clicking on the column headings.</p>
     </div>
-</div>
+  </div>
 
 {% endblock %}
 
