Only include standard study charts in the required list if the standard names feature is enabled. Added a horizontal bar at the start of the standard name chart options on the CT filtered page and the general chart options page. Refs issue #862

--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -83,7 +83,7 @@
                 {% if field.field.widget.attrs.class == 'CheckboxSelectMultiple' %}
                     <td class="shaded_top_bottom_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
                     <td class="shaded_top_bottom_border">{{ field }}</td>
-                {% elif field.label == 'Requested procedure frequency' or field.label == 'Time period' %}
+                {% elif field.label == 'Standard study frequency' or field.label == 'Requested procedure frequency' or field.label == 'Time period' %}
                     <td class="top_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
                     <td class="top_border">{{ field }}</td>
                 {% else %}
