Setting the class of the CT options tables so that they occupy the full width of the div. Refs issue #862

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -109,7 +109,7 @@
                         <div id="{{ field_group.grouper|cut:" " }}" class="panel-collapse collapse">
                             <div class="panel-body">
 
-                                <table>
+                                <table class="table table-condensed">
                                 {% for field in field_group.list %}
                                     <tr>
                                     {% if field.field.widget.attrs.class == 'CheckboxSelectMultiple' %}
