Replacing a new count with one that already exists, removing slow query. Refs #922

--- a/openrem/remapp/templates/remapp/rffiltered.html
+++ b/openrem/remapp/templates/remapp/rffiltered.html
@@ -6,7 +6,7 @@
 
 {% block toprow %}
       <p>
-        There are {{ filter.qs.count }} studies in this list.
+        There are {{ study_list.paginator.count }} studies in this list.
       </p>
 
 {% endblock %}
