--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -4,7 +4,7 @@
 
 {% block toprow %}
       <p>
-        There are {{ filter.qs.count }} studies in this list.
+        There are {{ study_list.paginator.count }} studies in this list.
       </p>
 {% endblock %}
 
